iac/kustomize/kube-prometheus-stack/overlays/patches/grafana-domain.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-stack-grafana
spec:
  template:
    spec:
      containers:
        - name: grafana
