iac/kustomize/kube-prometheus-stack/overlays/patches/ingress-delete.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-stack-grafana
$patch: delete
